--- a/html/Frame3List_frm.html
+++ b/html/Frame3List_frm.html
@@ -11,12 +11,17 @@
 <ul class="aui-list aui-list-in">
             <li class="aui-list-item">
                 <div class="aui-list-item-inner aui-list-item-arrow">
-                    求租房
+                    整租
                 </div>
             </li>
             <li class="aui-list-item">
                 <div class="aui-list-item-inner aui-list-item-arrow">
-                    求购房
+                    合租
+                </div>
+            </li>
+            <li class="aui-list-item">
+                <div class="aui-list-item-inner aui-list-item-arrow">
+                    短租
                 </div>
             </li>
         </ul>
