--- a/html/forgetPassword_frame.html
+++ b/html/forgetPassword_frame.html
@@ -269,13 +269,13 @@ function  user_reset() {
         }
     }, function(ret, err) {
         api.hideProgress();
-        if (ret) {
+        if (ret.code != 'error') {
           console.log(ret.Msg)
             api.alert({
               title: '提示',
               msg: ret.Msg,
             }, function() {
-              if (ret.code == 'success') {
+              if (ret) {
                   // 跨窗口执行Script, 将用户名传给登录页面
                   api.execScript({
                       name: 'login',
