--- a/html/frame4.html
+++ b/html/frame4.html
@@ -144,11 +144,10 @@
     <section class="aui-content bg-white aui-margin-b-15">
         <div class="aui-list aui-media-list aui-list-noborder aui-bg-info user-info">
             <div class="aui-list-item aui-list-item-middle user-header">
-                <div class="username">白毛浮绿水</div>
+                <div class="username" id="user">白毛浮绿水</div>
                 <div class="icon-panel" tapmode onclick="fnSetAvatar()">
                     <div id="icon" class="icon"></div>
                 </div>
-                  <!-- <div class="aui-btn" onclick="fnLogin()">马上登录</div> -->
                 </div>
             </div>
         </div>
@@ -209,7 +208,7 @@
                 <div class="aui-list-item-label-icon list">
                     <img src="../image/user-icon8.png" alt="">
                 </div>
-                <div class="aui-list-item-inner aui-list-item-arrow" style="border-bottom:none;">
+                <div class="aui-list-item-inner aui-list-item-arrow" style="">
                     历史记录
                 </div>
             </li>
@@ -217,51 +216,31 @@
                 <div class="aui-list-item-label-icon list">
                     <img src="../image/dingyue.png" alt="">
                 </div>
-                <div class="aui-list-item-inner aui-list-item-arrow" style="border-bottom:none;">
+                <div class="aui-list-item-inner aui-list-item-arrow" style="">
                     我的订阅
+                </div>
+            </li>
+            <li class="aui-list-item list_li" onclick="fnopenAdmission()">
+                <div class="aui-list-item-label-icon list">
+                    <img src="../image/dingyue.png" alt="">
+                </div>
+                <div class="aui-list-item-inner aui-list-item-arrow" style="border-bottom:none;">
+                    平台入驻
                 </div>
             </li>
         </ul>
 </body>
 <script type="text/javascript" src="../script/api.js" ></script>
-<script type="text/javascript" src='../script/common.js'>
-
-</script>
+<script type="text/javascript" src='../script/common.js'></script>
 <script type="text/javascript">
+    var userInfo = $api.getStorage('userInfo');
+    var user = $api.byId('user');
     apiready = function () {
       init();
-        // getUserInfo();
+      fnUpdateLocalAvatar(userInfo.image);
+      $api.html(user,userInfo.user);
     }
-    function fnlogin() {
-      api.openWin({
-          name: 'login',
-          url: './login.html',
-          pageParam: {
-              name: 'test'
-          }
-      });
 
-    }
-    // 获取个人信息
-    // function getUserInfo() {
-    //     var userInfo = $api.getStorage('id');
-    //     api.ajax({
-    //         url:  hname.hname.name +'/public/index/Create/user_image?userid=' + userInfo,
-    //         method: 'get',
-    //         headers: {
-    //             "X-APICloud-AppId": "A6079750662654",
-    //             "X-APICloud-AppKey": "4B3AB3D8-C633-6D3E-F6C3-37EDFE6978AB"
-    //         },
-    //     }, function(ret, err) {
-    //         if (ret) {
-    //             fnUpdateLocalAvatar(ret);
-    //         } else {
-    //             alert(JSON.stringify(err));
-    //         }
-    //     });
-    // }
-
-    // 更新头像显示
     function fnUpdateLocalAvatar(data_) {
         // 缓存头像
         var icon = $api.byId('icon');
@@ -269,8 +248,9 @@
             url: data_
         }, function(ret, err) {
             if (ret) {
-                icon.style.backgroundImage = 'url('+ ret.url + ')';
-                // $api.css(icon,'background:url('+ ret.url +')')
+                $api.css(icon,'background-image:url('+ ret.url + ')');
+                userInfo.image = ret.url;
+                $api.setStorage('userInfo',userInfo);
             } else {
                 api.toast({
                     msg: '获取头像失败',
@@ -340,13 +320,22 @@
             }
         }, function(ret, err) {
             if (ret.Msg) {
-              alert(234)
               fnUpdateLocalAvatar(ret.Msg);
             } else {
                 console.log(JSON.stringify(err));
             }
         });
     }
+    function fnopenAdmission() {
+      // 打开平台入驻平台
+      api.openWin({
+          name: 'MerchantEntry_win',
+          url: './user/MerchantEntry_win.html',
+          pageParam: {
+              name: 'test'
+          }
+      });
 
+    }
 </script>
 </html>
