--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
         <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >发现</li>
         <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >选择发布类型</li>
         <li tapmode="hover" onclick="randomSwitchBtn( this );" class="flex-con" >消息</li>
-        <li tapmode="hover"  class="flex-con" onclick="randomSwitchBtn( this );" >个人中心</li>
+        <li tapmode="hover"  class="flex-con">
+          个人中心
+          <a class="aui-btn aui-pull-right" tapmode onclick="fnopenSetting()" style="padding-right:15px;margin-top:0px;">
+              <span class="aui-iconfont aui-icon-gear" style="font-size:20px"></span>
+          </a>
+        </li>
     </ul>
   </header>
     <div id="main" class="flex-con">
@@ -122,7 +127,21 @@ apiready = function () {
 function funIniGroup(){
     var eHeaderLis = $api.domAll('header li'),
         frames = [];
-
+    for (var i = 0,len = eHeaderLis.length; i < len; i++) {
+              // 判断是否登陆
+              // 从缓存中获取用户信息
+              var userInfo= $api.getStorage('userInfo');
+              var url = './html/frame'+i+'.html';
+              if(i == 4 && !userInfo){
+                url = './html/userWindow.html';
+              }
+              frames.push( {
+                name: 'frame'+i,
+                url: url,
+                bgColor : '#fff',
+                bounces:true
+            } )
+    }
     api.openFrameGroup({
         name: 'group',
         scrollEnabled: false,
@@ -196,4 +215,15 @@ function initEventListenner() {
       alert('断网了');
     });
 }
+// 打开个人中心设置窗口
+  function fnopenSetting() {
+  api.openWin({
+      name: 'setting_win',
+      url: './html/user/setting_win.html',
+      pageParam: {
+          name: 'test'
+      }
+  });
+
+  }
 </script>
