--- a/html/user/infoSet_win.html
+++ b/html/user/infoSet_win.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
-    <link rel="stylesheet" type="text/css" href="../css/aui.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/aui.css" />
 </head>
 <body>
     <header class="aui-bar aui-bar-nav" id="aui-header">
         <a class="aui-btn aui-pull-left" tapmode onclick="closeWin()">
             <span class="aui-iconfont aui-icon-left"></span>
         </a>
-        <div class="aui-title">个人资料设置</div>
+        <div class="aui-title">消息管理</div>
     </header>
 </body>
-<script type="text/javascript" src="../script/api.js"></script>
+<script src="../../script/api.js"></script>
 <script type="text/javascript">
     apiready = function(){
         api.parseTapmode();
@@ -23,8 +23,8 @@
         var headerPos = $api.offset(header);
         var body_h = $api.offset($api.dom('body')).h;
         api.openFrame({
-            name: 'userInfo_frm',
-            url: 'userInfo_frm.html',
+            name: 'infoSet_frm',
+            url: 'infoSet_frm.html',
             bounces: true,
             rect: {
                 x: 0,
